fix: ugly scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,18 +10,3 @@ body,
   width: 100%;
   height: 100%;
 }
-
-*::-webkit-scrollbar {
-  width: 1rem;
-}
-
-*::-webkit-scrollbar-corner {
-  background-color: rgba(0, 0, 0, 0);
-}
-
-*::-webkit-scrollbar-thumb {
-  border: 0.3rem solid rgba(0, 0, 0, 0);
-  background-clip: padding-box;
-  border-radius: 9999px;
-  background-color: var(--chakra-colors-gray-300);
-}
